# ai-project-analizer

./: .dockerignore  .env  .env.sample  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  beeai.yaml  create.sh  docker-compose.yml  install.sh  llm_prompt_Run_state.txt  pyproject.toml  requirements.txt  requirements_dev.txt  start.sh
docs/: CONTRIBUTING.md  api.md  architecture.md  architecture_dev.md
src/: __main__.py  config.py  main.py  old__main__.py  workflow.ipynb  workflow_debug.ipynb  workflows copy.py  workflows.py
src/agents/: extraction_agent.py  file_analysis_agent.py  file_triage_agent.py  summary_synthesizer_agent.py  tree_builder_agent.py  zip_validator_agent.py
src/ai_project_analyzer/: __init__.py  __main__.py
src/ai_project_analyzer/agents/: __init__.py
src/ai_project_analyzer/cli/: __init__.py  app.py
src/ai_project_analyzer/core/: __init__.py  config.py  exceptions.py  logging.py
src/ai_project_analyzer/domain/: __init__.py  models.py
src/ai_project_analyzer/infrastructure/: __init__.py
src/ai_project_analyzer/services/: __init__.py  workflow.py
src/ai_project_analyzer/web/: __init__.py  app.py
src/tools/: file_io_tool.py  rich_printer_tool.py
src/utils/: encoding_helper.py  language_detector.py  llm_router.py
static/: app.js  style.css
templates/: result.html  upload.html
tests/: conftest.py
tests/integration/: test_workflow.py
tests/unit/: test_config.py  test_models.py
